# psd

./: Cargo.toml  README.md
src/: blend_mode.rs  color_channel.rs  color_mode.rs  color_space.rs  data.rs  document.rs  error.rs  file_stream.rs  image.rs  image_compression.rs  layer.rs  layer_container.rs  lib.rs  rle.rs  string.rs
src/color_channel/: channel_type.rs
src/document/: constants.rs
src/document/constants/: resource_identifiers.rs
src/layer/: divider_type.rs  group.rs
src/layer/group/: constants.rs
src/string/: pascal.rs  unicode.rs
tests/resources/: 2x1-magick-raw.psd  2x1-magick-rle.psd  2x1.psd  2x2-magick-rle.psd  2x3-magick-rle.psd  alphachannel.data  bluechannel.data  clouds-encoded-image.data  clouds-magick.psd  clouds-raw-red.data  clouds-rle-red.data  clouds2.psd  encodedimage.data  foldered.psd  gradient.psd  greenchannel.data  january-2021-issue.psd  layerrecord.data  redchannel.data  semi-transparent.psd  simple.psd  tiny-clouds-magick.psd  with-empty-layer.psd  yellow.psd
