[package]
name = "psd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
file_stream = { path = "../file_stream" }
graphics = { path = "../graphics", package = "graphics" }
thiserror = "1.0.56"
